resources/mhttpd.css
/* ... */
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
   display: block;
}
body {
   line-height: 1;
}
ol, ul {
   list-style: none;
}
blockquote, q {
   quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
   content: '';
   content: none;
}
table {
   border-collapse: separate;
   border-spacing: 0;
}
/*end CSS reset*/

/*ask the box model to please behave in a sane manner*/
* { 
   box-sizing: border-box; 
}

/*generic elements////////////////////////////////////////////////////*/

body {
   font-family:verdana,tahoma,sans-serif;
   color:#111111;
   background-color: #EEEEEE;
   min-width: -moz-min-content;
   min-width: -webkit-min-content; /*currently (July 2013) only FF and Chrome support min-content, expand to other browsers as they catch up.*/
   text-align:center;
   height:100%;
}

form {
   height:100%;
}

table {
   /*center all tables*/
   margin-left: auto;
   margin-right: auto;
   /*don't mash cells into each other*/
   border-spacing: 1px;
}

td{
   /*pad cells proportionally to text size:*/;
   padding:0.25em;
   /*center cell contents*/
   text-align: center;

   border:1px solid #EEEEEE;
}

th, h1, h3{
   /*pad cells proportionally to text size:*/;
   padding:0.25em;   
   text-align: center;
}

p{
   line-height: 1.5em;
}

select{
   font-size: 100%;
}

/* define special shape for all buttons */
button, input[type=button], input[type=submit], input[type=reset] {
   background-color: #CCCCCC; /*#00B26B;*/
   color: #444444;
   font-size: 100%;
   padding:0.25em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   border:1px solid #808080;
   border-radius: 5px;
   margin-bottom:1px;
}

/* special colours for enabled buttons */
button:enabled, input:enabled[type=button], input:enabled[type=submit], input:enabled[type=reset] {
   background: #f5f5f5; /* Old browsers */
   background: -moz-linear-gradient(top,  #f5f5f5 0%, #c0c0c0 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#c0c0c0)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #f5f5f5 0%,#c0c0c0 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #f5f5f5 0%,#c0c0c0 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #f5f5f5 0%,#c0c0c0 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #f5f5f5 0%,#c0c0c0 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#c0c0c0',GradientType=0 ); /* IE6-9 */
}

/* special colours for hovered buttons */
button:hover:enabled, input[type=button]:hover:enabled, input[type=submit]:hover:enabled, input[type=reset]:hover:enabled {
   background: #ffffff; /* Old browsers */
   background: -moz-linear-gradient(top,  #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(50%,#f3f3f3), color-stop(51%,#ededed), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
}

/* default colours for disabled buttons */
button:disabled, input[type=button]:disabled, input[type=submit]:disabled, input[type=reset]:disabled {
}

td.ODBdirectory{
   text-align: left;
   background-color: #EEEEEE;
   padding-left: 2em;
}

td.titleCell{
   font-weight: bold;
}

tr.titleRow{
   font-weight: bold;
   background-color: #EEEEEE !important;
}

table.navigationTable{
   width: 100%;
   color: #EEEEEE;
   border-bottom:1px solid #808080;
   border-collapse: collapse;
   border-spacing: 0;
   
   background: #e9e9e9; /* Old browsers */
   background: -moz-linear-gradient(top,  #e9e9e9 0%, #b7b7b7 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e9e9e9), color-stop(100%,#b7b7b7)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #e9e9e9 0%,#b7b7b7 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #e9e9e9 0%,#b7b7b7 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #e9e9e9 0%,#b7b7b7 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #e9e9e9 0%,#b7b7b7 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9e9e9', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
}

table.navigationTable td{
   border: none;
}

input[type=button].navButton {
   background-color: #CCCCCC; /*#00B26B;*/
   color: #444444;
   font-size: 100%;
   padding:0.25em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   border:1px solid #808080;
   border-radius: 5px;
   margin-bottom:1px;

   background: #f5f5f5; /* Old browsers */
   background: -moz-linear-gradient(top,  #f5f5f5 0%, #c0c0c0 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#c0c0c0)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #f5f5f5 0%,#c0c0c0 100%); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top,  #f5f5f5 0%,#c0c0c0 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top,  #f5f5f5 0%,#c0c0c0 100%); /* IE10+ */
   background: linear-gradient(to bottom,  #f5f5f5 0%,#c0c0c0 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#c0c0c0',GradientType=0 ); /* IE6-9 */
}
/* ... */

